Bug 828169 - Don't use nsIDOMNode in editor transactions r=ehsan