editor/libeditor/base/ChangeAttributeTxn.cpp
@@ -7,9 +7,11 @@
 #include "nsAString.h"
 #include "nsDebug.h"                    // for NS_ASSERTION
 #include "nsError.h"                    // for NS_ERROR_NOT_INITIALIZED, etc
-#include "nsIDOMElement.h"              // for nsIDOMElement
-#include "nsIEditor.h"                  // for nsIEditor
+#include "nsEditor.h"                   // for nsEditor
 #include "nsString.h"                   // for nsString
+#include "mozilla/dom/Element.h"
+
+using namespace mozilla;
 
 ChangeAttributeTxn::ChangeAttributeTxn()
   : EditTxn()
@@ -31,8 +33,8 @@ NS_IMPL_RELEASE_INHERITED(ChangeAttributeTxn, EditTxn)
 NS_INTERFACE_MAP_BEGIN_CYCLE_COLLECTION(ChangeAttributeTxn)
 NS_INTERFACE_MAP_END_INHERITING(EditTxn)
 
-NS_IMETHODIMP ChangeAttributeTxn::Init(nsIEditor      *aEditor,
-                                       nsIDOMElement  *aElement,
+NS_IMETHODIMP ChangeAttributeTxn::Init(nsEditor      *aEditor,
+                                       dom::Element *aElement,
                                        const nsAString& aAttribute,
                                        const nsAString& aValue,
                                        bool aRemoveAttribute)
@@ -41,7 +43,7 @@ NS_IMETHODIMP ChangeAttributeTxn::Init(nsIEditor      *aEditor,
   if (!aEditor || !aElement) { return NS_ERROR_NULL_POINTER; }
 
   mEditor = aEditor;
-  mElement = do_QueryInterface(aElement);
+  mElement = aElement;
   mAttribute = aAttribute;
   mValue = aValue;
   mRemoveAttribute = aRemoveAttribute;
@@ -55,20 +57,24 @@ NS_IMETHODIMP ChangeAttributeTxn::DoTransaction(void)
   NS_ASSERTION(mEditor && mElement, "bad state");
   if (!mEditor || !mElement) { return NS_ERROR_NOT_INITIALIZED; }
 
+  nsCOMPtr<nsIDOMElement> element = do_QueryInterface(mElement);
   // need to get the current value of the attribute and save it, and set mAttributeWasSet
-  nsresult result = mEditor->GetAttributeValue(mElement, mAttribute, mUndoValue, &mAttributeWasSet);
+  nsresult result = mEditor->GetAttributeValue(element, mAttribute, mUndoValue, &mAttributeWasSet);
+  NS_ENSURE_SUCCESS(result, result);
+
   // XXX: hack until attribute-was-set code is implemented
   if (!mUndoValue.IsEmpty())
     mAttributeWasSet = true;
   // XXX: end hack
-  
+
+  ErrorResult rv;
   // now set the attribute to the new value
   if (!mRemoveAttribute)
-    result = mElement->SetAttribute(mAttribute, mValue);
+    mElement->SetAttribute(mAttribute, mValue, rv);
   else
-    result = mElement->RemoveAttribute(mAttribute);
+    mElement->RemoveAttribute(mAttribute, rv);
 
-  return result;
+  return rv.ErrorCode();
 }
 
 NS_IMETHODIMP ChangeAttributeTxn::UndoTransaction(void)
@@ -76,13 +82,13 @@ NS_IMETHODIMP ChangeAttributeTxn::UndoTransaction(void)
   NS_ASSERTION(mEditor && mElement, "bad state");
   if (!mEditor || !mElement) { return NS_ERROR_NOT_INITIALIZED; }
 
-  nsresult result;
+  ErrorResult rv;
   if (mAttributeWasSet)
-    result = mElement->SetAttribute(mAttribute, mUndoValue);
+    mElement->SetAttribute(mAttribute, mUndoValue, rv);
   else
-    result = mElement->RemoveAttribute(mAttribute);
+    mElement->RemoveAttribute(mAttribute, rv);
 
-  return result;
+  return rv.ErrorCode();
 }
 
 NS_IMETHODIMP ChangeAttributeTxn::RedoTransaction(void)
@@ -90,13 +96,13 @@ NS_IMETHODIMP ChangeAttributeTxn::RedoTransaction(void)
   NS_ASSERTION(mEditor && mElement, "bad state");
   if (!mEditor || !mElement) { return NS_ERROR_NOT_INITIALIZED; }
 
-  nsresult result;
+  ErrorResult rv;
   if (!mRemoveAttribute)
-    result = mElement->SetAttribute(mAttribute, mValue);
+    mElement->SetAttribute(mAttribute, mValue, rv);
   else
-    result = mElement->RemoveAttribute(mAttribute);
+    mElement->RemoveAttribute(mAttribute, rv);
 
-  return result;
+  return rv.ErrorCode();
 }
 
 NS_IMETHODIMP ChangeAttributeTxn::GetTxnDescription(nsAString& aString)
